--- a/project2.html
+++ b/project2.html
@@ -38,34 +38,41 @@
   <main class="container mt-5 project-page">
     <section>
       <div class="lang-sv">
-        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Projekt 2</h1>
+        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Casa Carpe</h1>
       </div>
       <div class="lang-en">
-        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Project 2</h1>
+        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Casa Carpe</h1>
       </div>
 
-      <img src="images/project2/placeholderimg.jpg" class="img-fluid mb-4 d-block mx-auto project-main-img" alt="Projekt 2 Bild" />
+      <img src="images/project2/casa.png" class="img-fluid mb-4 d-block mx-auto project-main-img" alt="Projekt 2 Bild" />
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <img src="images/project2/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 2 Bild 1" />
+          <img src="images/project2/casa1.png" class="img-fluid project-sub-img" alt="Projekt 2 Bild 1" />
         </div>
         <div class="col-md-4">
-          <img src="images/project2/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 2 Bild 2" />
+          <img src="images/project2/casa2.png" class="img-fluid project-sub-img" alt="Projekt 2 Bild 2" />
         </div>
         <div class="col-md-4">
-          <img src="images/project2/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 2 Bild 3" />
+          <img src="images/project2/casa3.png" class="img-fluid project-sub-img" alt="Projekt 2 Bild 3" />
         </div>
       </div>
 
       <div class="lang-sv">
+        <h1 class="project-description">
+          Byggd under utbildningen
+        </h1>
         <p class="project-description">
-          Det här är en svensk beskrivning av projektet. Här kan du skriva mer om funktionerna, designen eller vad som var utmanande i projektet.
+          En modern och responsiv hemsida byggd med React, HTML, JavaScript och CSS för uthyrning av en lägenhet. Projektet innehåller ett bildgalleri, ett kontaktformulär samt en integrerad karta som visar lägenhetens exakta läge.
         </p>
       </div>
       <div class="lang-en">
+        <h1 class="project-description">
+          Built during my studies
+        </h1>
         <p class="project-description">
-          This is an English description of the project. Use this space to explain the features, design choices or challenges you faced.
+          A modern and responsive website built with React, HTML, JavaScript, and CSS for renting out an apartment. The project includes a photo gallery, a contact form, and an integrated map showing the apartment's exact location.
+
         </p>
       </div>
     </section>
