--- a/project3.html
+++ b/project3.html
@@ -38,35 +38,40 @@
   <main class="container mt-5 project-page">
     <section>
       <div class="lang-sv">
-        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Projekt 3</h1>
+        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Väder App</h1>
       </div>
       <div class="lang-en">
-        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Project 3</h1>
+        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Weather app</h1>
       </div>
 
-      <img src="images/project3/placeholderimg.jpg" class="img-fluid mb-4 d-block mx-auto project-main-img" alt="Projekt 3 Bild" />
+      <img src="images/project3/weather.png" class="img-fluid mb-4 d-block mx-auto project-main-img" alt="Projekt 3 Bild" />
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <img src="images/project3/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 3 Bild 1" />
+          <img src="images/project3/weather1.png" class="img-fluid project-sub-img" alt="Projekt 3 Bild 1" />
         </div>
         <div class="col-md-4">
-          <img src="images/project3/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 3 Bild 2" />
+          <img src="images/project3/weather2.png" class="img-fluid project-sub-img" alt="Projekt 3 Bild 2" />
         </div>
         <div class="col-md-4">
-          <img src="images/project3/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 3 Bild 3" />
+          <img src="images/project3/weather3.png" class="img-fluid project-sub-img" alt="Projekt 3 Bild 3" />
         </div>
       </div>
 
       <div class="lang-sv">
+        <h1 class="project-description">
+          Byggd under utbildningen
+        </h1>
         <p class="project-description">
-          Det här är en svensk beskrivning av projekt 3. Du kan förklara vad projektet handlar om, hur du byggde det och vilka tekniker som användes.
+          Detta är en Android-applikation utvecklad i Kotlin med hjälp av Android Studio. Syftet med appen är att visa väderdata för en hårdkodad stad (för tillfället Malmö) genom att integrera med OpenWeatherMap API. Applikationen är uppbyggd med modern Android-arkitektur och följer en fragment-baserad struktur med flerskärmsnavigering.
         </p>
       </div>
       <div class="lang-en">
+        <h1 class="project-description">
+          Built during my studies
+        </h1>
         <p class="project-description">
-          This is an English description of project 3. Feel free to describe what the project is about, how it was built, and what technologies were used.
-        </p>
+          This is an Android application developed in Kotlin using Android Studio. The purpose of the app is to display weather data for a hardcoded city (currently Malmö) by integrating with the OpenWeatherMap API. The application is built using modern Android architecture and follows a fragment-based structure with multi-screen navigation.        </p>
       </div>
     </section>
   </main>
