--- a/project4.html
+++ b/project4.html
@@ -38,35 +38,40 @@
   <main class="container mt-5 project-page">
     <section>
       <div class="lang-sv">
-        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Projekt 4</h1>
+        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Bildgenereringsapp</h1>
       </div>
       <div class="lang-en">
-        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Project 4</h1>
+        <h1 class="text-center"><i class="fas fa-project-diagram"></i> Image generator app</h1>
       </div>
 
-      <img src="images/project4/placeholderimg.jpg" class="img-fluid mb-4 d-block mx-auto project-main-img" alt="Projekt 4 Bild" />
+      <img src="images/project4/imageapp.png" class="img-fluid mb-4 d-block mx-auto project-main-img" alt="Projekt 4 Bild" />
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <img src="images/project4/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 4 Bild 1" />
+          <img src="images/project4/imageapp1.png" class="img-fluid project-sub-img" alt="Projekt 4 Bild 1" />
         </div>
         <div class="col-md-4">
-          <img src="images/project4/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 4 Bild 2" />
+          <img src="images/project4/imageapp2.png" class="img-fluid project-sub-img" alt="Projekt 4 Bild 2" />
         </div>
         <div class="col-md-4">
-          <img src="images/project4/placeholderimg.jpg" class="img-fluid project-sub-img" alt="Projekt 4 Bild 3" />
+          <img src="images/project4/imageapp3.png" class="img-fluid project-sub-img" alt="Projekt 4 Bild 3" />
         </div>
       </div>
 
       <div class="lang-sv">
+        <h1 class="project-description">
+          Byggd under utbildningen
+        </h1>
         <p class="project-description">
-          Det här är en svensk beskrivning av projekt 4. Du kan använda texten till att berätta om tekniker, lösningar och vad som gör projektet unikt.
+          Detta projektet är en enkel men komplett crossplattform-applikation byggd i Flutter. Applikationen fungerar på både Android och webben. Appen består av två huvudsidor: en login-sida och en hemsida. På login-sidan kan användaren fylla i e-post och lösenord (fiktiv inloggning). När man loggat in navigeras man vidare till hemsidan, där appen hämtar och visar bilder på hundar från The Dog API via HTTP-anrop.
         </p>
       </div>
       <div class="lang-en">
+        <h1 class="project-description">
+          Built during my studies
+        </h1>
         <p class="project-description">
-          This is an English description of project 4. You can use this space to talk about the tech used, the challenges, and what makes this project stand out.
-        </p>
+          This project is a simple yet complete cross-platform application built with Flutter. The application runs on both Android and the web. The app consists of two main pages: a login page and a home page. On the login page, the user can enter their email and password (fictional login). Once logged in, the user is navigated to the home page, where the app fetches and displays pictures of dogs from The Dog API via HTTP requests.        </p>
       </div>
     </section>
   </main>
