fixade linkedin länken och fixade lite text

--- a/about.html
+++ b/about.html
@@ -48,20 +48,20 @@
       <h3 class="text-center">August Dahlström</h3>
       <div class="text-center mb-4">
         <a href="https://github.com/A0G0ST" target="_blank" class="mr-3"><i class="fab fa-github fa-2x"></i></a>
-        <a href="https://se.linkedin.com/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/august-dahlstr%C3%B6m-895429224/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
       </div>
 
       <div class="lang-en">
-        <p>Hi! My name is August, and I'm a front-end developer with a degree in web development. I have a strong passion for creating interactive, responsive, and user-friendly web experiences.</p>
+        <p>Hi! My name is August, and I'm a front-end developer with a degree in web development. I have a strong passion for creating interactive, responsive, and user-friendly web experiences. I also have a big interest in design</p>
         <p>During my studies, I specialized in HTML, CSS, JavaScript, and modern front-end frameworks like React. I also studied back-end development, which has given me a broad understanding of the entire development process from database management and APIs to server logic and full-stack solutions.</p>
-        <p>My passion lies in building beautiful and functional web applications where design and performance go hand in hand. I always strive to write clean, scalable, and optimized code while staying up to date with the latest technologies in web development.</p>
+        <p>My passion lies in building beautiful and functional web applications where design and performance go hand in hand. I always strive to write clean, scalable, and optimized code while trying to stay up to date with the latest technologies in web development.</p>
         <p>When I'm not coding, I enjoy gaming, good food and spending time with friends and family.</p>
       </div>
 
       <div class="lang-sv">
-        <p>Hej! Jag heter August och är front-end utvecklare med examen inom webbutveckling. Jag har ett stort intresse för att skapa interaktiva, responsiva och användarvänliga webbupplevelser.</p>
+        <p>Hej! Jag heter August och är front-end utvecklare med examen inom webbutveckling. Jag har ett stort intresse för att skapa interaktiva, responsiva och användarvänliga webbupplevelser. Jag har även ett stort intresse för design.</p>
         <p>Under mina studier har jag fördjupat mig i HTML, CSS, JavaScript och moderna ramverk som React. Jag har även studerat back-end, vilket gett mig en bred förståelse för hela utvecklingsprocessen från databashantering och API:er till serverlogik och fullstack-lösningar.</p>
-        <p>Min passion ligger i att bygga snygga och funktionella webbapplikationer där design och prestanda går hand i hand. Jag strävar alltid efter att skriva ren, skalbar och optimerad kod, samtidigt som jag håller mig uppdaterad med de senaste teknikerna inom webbutveckling.</p>
+        <p>Min passion ligger i att bygga snygga och funktionella webbapplikationer där design och prestanda går hand i hand. Jag strävar alltid efter att skriva ren, skalbar och optimerad kod, samtidigt som jag försöker hålla mig uppdaterad med de senaste teknikerna inom webbutveckling.</p>
         <p>När jag inte kodar gillar jag att spela, äta gott och umgås med vänner och familj.</p>
       </div>
     </section>
