--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             <div class="about-text ml-md-4 text-center text-md-left">
                 <div class="lang-sv">
                     <h2>Hej, jag heter August!</h2>
-                    <p>Jag är en <span class="highlight-primary">Front-end</span> <span class="highlight-primary">Utvecklare</span> baserad i Malmö. Jag brinner för att skapa rena, tillgängliga och engagerande webblösningar. Jag arbetar med HTML, CSS, JavaScript och moderna ramverk som React.</p>
+                    <p>Jag är en <span class="highlight-primary">Front-end</span> <span class="highlight-primary">Utvecklare</span> baserad i Malmö. Jag brinner för att skapa rena, tillgängliga och engagerande webblösningar med stort intresse för design. Jag arbetar med HTML, CSS, JavaScript och moderna ramverk som React.</p>
                     <p>august@pocama.se</p>
                 </div>
                 <div class="lang-en">
                     <h2>Hey, I am August!</h2>
-                    <p>I'm a <span class="highlight-primary">Front-end</span> <span class="highlight-primary">Developer</span> based in Malmö, Sweden. I'm passionate about clean, accessible, and engaging web experiences. My expertise lies in HTML, CSS, JavaScript, and modern frameworks like React.</p>
+                    <p>I'm a <span class="highlight-primary">Front-end</span> <span class="highlight-primary">Developer</span> based in Malmö, Sweden. I'm passionate about clean, accessible, and engaging web experiences with a big interest in design. My expertise lies in HTML, CSS, JavaScript, and modern frameworks like React.</p>
                     <p>august@pocama.se</p>
                 </div>
                 <div class="social-links mt-3">
                     <a href="https://github.com/A0G0ST" target="_blank" class="mr-3"><i class="fab fa-github fa-2x"></i></a>
-                    <a href="https://se.linkedin.com/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/august-dahlstr%C3%B6m-895429224/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
                 </div>
             </div>
         </section>
