--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 <div class="lang-sv">
                     <h2>Hej, jag heter August!</h2>
                     <p>Jag är en <span class="highlight-primary">Front-end</span> <span class="highlight-primary">Utvecklare</span> baserad i Malmö. Jag brinner för att skapa rena, tillgängliga och engagerande webblösningar med stort intresse för design. Jag arbetar med HTML, CSS, JavaScript och moderna ramverk som React.</p>
-                    <p>august@pocama.se</p>
+                    <p>august@adsoft.se</p>
                 </div>
                 <div class="lang-en">
                     <h2>Hey, I am August!</h2>
                     <p>I'm a <span class="highlight-primary">Front-end</span> <span class="highlight-primary">Developer</span> based in Malmö, Sweden. I'm passionate about clean, accessible, and engaging web experiences with a big interest in design. My expertise lies in HTML, CSS, JavaScript, and modern frameworks like React.</p>
-                    <p>august@pocama.se</p>
+                    <p>august@adsoft.se</p>
                 </div>
                 <div class="social-links mt-3">
                     <a href="https://github.com/A0G0ST" target="_blank" class="mr-3"><i class="fab fa-github fa-2x"></i></a>
@@ -248,11 +248,11 @@
         <section class="contact-section text-center py-5">
             <div class="lang-sv">
                 <h2>Hör gärna av dig!</h2>
-                <p class="contact-email"><a href="mailto:august@pocama.se">august@pocama.se</a></p>
+                <p class="contact-email"><a href="mailto:august@adsoft.se">august@adsoft.se</a></p>
             </div>
             <div class="lang-en">
                 <h2>Let's have a chat!</h2>
-                <p class="contact-email"><a href="mailto:august@pocama.se">august@pocama.se</a></p>
+                <p class="contact-email"><a href="mailto:august@adsoft.se">august@adsoft.se</a></p>
             </div>
         </section>
     </main>
